# QTVideoDemo

./: CMakeLists.txt  avcodexmanager.cpp  avcodexmanager.h  camera.cpp  camera.h  camera.ui  camera_x.qrc  glwidget.cpp  glwidget.h  pch.h
